fix images and layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,37 @@ code {
 		monospace;
 }
 
-.g-card-image {
-  object-fit: cover;
-	border-radius: 6px;
-	width: 360px;
-	height: 480px;
-  box-shadow: 0px 0px 60px 10px #ccc;
+@media only screen and (min-width: 1200px) {
+	.g-card-image {
+		object-fit: cover;
+		width: 480px;
+		height: 560px;
+		box-shadow: 0px 0px 60px 10px #ccc;
+	}
+}
+
+@media (max-width: 1200px) and (min-width: 767px) {
+	.g-card-image {
+		object-fit: cover;
+		width: 240px;
+		height: 360px;
+	}
+}
+
+@media (max-width: 767px) {
+	.g-card-image {
+		object-fit: cover;
+		width: 500px;
+		height: 300px;
+		padding-left: 40px;
+		padding-right: 40px;
+	}
 }
 
 .g-card-info {
 	margin-left: 10px;
 	min-height: 100px;
+	margin-bottom: 30px;
 }
 
 .g-card-title {
